--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,7 @@
 .read-the-docs {
   color: #888;
 }
+.home-page {
+  background-image: url("./src/assets/background.jpg");
+  /* Additional CSS properties for styling */
+}
